--- a/1-apple-mainpage/src/style.css
+++ b/1-apple-mainpage/src/style.css
@@ -1,9 +1,10 @@
+body { margin: 0; padding: 0; }
 header {
     display: flex;
     justify-content: center;
 
     width: 100%;
-    height: 44px;
+    height: 45px;
     background: rgba(0,0,0,0.8);
 
     position: fixed;
@@ -16,23 +17,75 @@ nav {
 }
 .nav-list {
     list-style: none;
+
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.nav-item {
+.nav-list__item {
     font-size: 12px;
     color: #f5f5f5;
 }
 main {
-    padding-top: 44px;
+    padding-top: 45px;
 }
-.header-message-block {
+.section-ribbon {
     display: flex;
     justify-content: center;
     align-items: center;
+
     font-size: 14px;
+
     width: 100%;
-    height: 44px;
+    height: 45px;
     background: rgba(255,255,255,);
+}
+.section-announcement__tv {
+    max-height: 860px;
+    min-height: 525px;
+
+    background-image: url('./static/img/section_announcement_tv_large.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.section-announcement__iphone14pro {
+    height: 860px;
+    min-height: 570px;
+    background-color: rgba(0,0,0,1);
+
+    margin-top: 15px;
+}
+.section-announcement__iphone14 {
+    height: 860px;
+    min-height: 570px;
+    background-color: rgb(250, 250, 250, 1);
+
+    margin-top: 15px;
+}
+.block-promo{
+    margin-top: 15px;
+}
+.block-promo__row {
+    margin: 15px;
+    display: flex;
+}
+.block-promo__row__elem {
+    min-height: 500px;
+    max-height: 580px;
+    background-color: rgb(41, 130, 152);
+    flex-grow: 1; /*flex*/
+}
+.block-promo__row :last-child {
+    margin-left: 15px;
+    background-color: rgb(75, 173, 109);
+}
+footer {
+    background-color: rgba(245,245,247, 1);
+}
+.content-block {
+    max-width: 980px;
+    height: 600px;
+    margin: 0 auto;
+    padding: 0 20px;
 }
