--- a/1-apple-mainpage/src/style.css
+++ b/1-apple-mainpage/src/style.css
@@ -30,7 +30,7 @@ nav {
 main {
     padding-top: 45px;
 }
-.section-ribbon {
+.ribbon {
     display: flex;
     justify-content: center;
     align-items: flex-end;
@@ -41,65 +41,52 @@ main {
     height: 45px;
     background: rgba(255,255,255,);
 }
-.section-announcement__tv {
+.announcement__elem_tv {
     max-height: 860px;
     min-height: 525px;
 
     background-image: url('./static/img/section_announcement_tv_large.jpg');
-    background-size: cover;
+    background-size:cover;
     background-position: center;
     background-repeat: no-repeat;
 }
-.section-announcement__iphone14pro {
+.announcement__elem_iphone14pro {
     height: 860px;
     min-height: 570px;
+    margin-top: 15px;
+
     background-color: rgba(0,0,0,1);
-
-    margin-top: 15px;
 }
-.section-announcement__iphone14 {
+.announcement__elem_iphone14 {
     height: 860px;
     min-height: 570px;
-    background-color: rgb(250, 250, 250, 1);
+    margin-top: 15px;
 
+    background-color: rgb(250, 250, 250, 1);
+}
+.promos{
     margin-top: 15px;
 }
-.block-promo{
-    margin-top: 15px;
-}
-.block-promo__row {
-    margin: 15px;
+.promos__row {
     display: flex;
+    margin: 15px;
 }
-.block-promo__row__elem {
+.promos__row__promo {
+    flex-grow: 1;
     min-height: 500px;
     max-height: 580px;
     background-color: rgb(41, 130, 152);
-    flex-grow: 1; /*flex*/
 }
-.block-promo__row :last-child {
+.promos__row :last-child {
     margin-left: 15px;
     background-color: rgb(75, 173, 109);
 }
-footer {
+.footer {
     background-color: rgba(245,245,247, 1);
 }
-.content-block {
+.footer__container {
     max-width: 980px;
     height: 600px;
     margin: 0 auto;
     padding: 0 20px;
-}
-.block {
-    background-color: burlywood;
-    width: 1000px;
-    display: block;
-}
-.inline {
-    display: inline;
-}
-.float {
-    float: right;
-    background-color: blueviolet;
-    width: 500px;
 }
